k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identity-backend
  namespace: identity-reconciliation

spec:
  replicas: 2

  selector:
    matchLabels:
      app: identity-backend

  template:
    metadata:
      labels:
        app: identity-backend

    spec:
      containers:
        - name: identity-backend

          image: identity-reconciliation:latest

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
