k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: identity-service
  namespace: identity-reconciliation

spec:
  selector:
    app: identity-backend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: NodePort
